# assimp-hl1-mdl-viewer

./: CMakeLists.txt  README.md
hl_mdlviewer/: CMakeLists.txt
hl_mdlviewer/cmake/: config.h.in
hl_mdlviewer/shaders/: base.in  custom_definitions.in  flat.vs  lighting.in  locations.in  normal.fs  normal.gs  normal.vs  smooth.fs  smooth.vs  textured.fs  textured.vs  uniform_blocks.in
hl_mdlviewer/src/: main.cpp
hl_mdlviewer/src/lib/: bbox_builder.cpp  bbox_builder.h  buffer_builder.cpp  buffer_builder.h  disposable.h  enable_memory_leak_detection.cpp  enable_memory_leak_detection.h  file_system.cpp  file_system.h  glad.c  glad.h  glbuffer.cpp  glbuffer.h  glprogram.cpp  glprogram.h  glshader.cpp  glshader.h  gltexture.cpp  gltexture.h  gluniformbuffer.cpp  gluniformbuffer.h  glvertex.h  math_functions.h  mdlviewer_application.cpp  mdlviewer_application.h  mdlviewer_presenter.h  mdlviewer_view.h  mesh_buffer.cpp  mesh_buffer.h  mesh_buffer_stride.h  render_view_settings.h  shader_parser.cpp  shader_parser.h  sound_system.cpp  sound_system.h  sound_system_impl.h  sound_system_windows.cpp  sound_system_windows.h
hl_mdlviewer/src/lib/hl1/: hl1_animation_event_handler.cpp  hl1_animation_event_handler.h  hl1_frame_interpolation.cpp  hl1_frame_interpolation.h  hl1_mdlviewer_presenter.cpp  hl1_mdlviewer_presenter.h  hl1_mdlviewer_view.h  hl1_model_render_settings.h  hl1_model_stats.h  hl1_null_view.h  hl1_sequence_listener.h  hl1_studiomodel.h  hl1_studiomodel_animation.cpp  hl1_studiomodel_animation.h  hl1_studiomodel_animation_data.h  hl1_studiomodel_buffer.h  hl1_studiomodel_defines.h  hl1_studiomodel_render.cpp  hl1_studiomodel_render.h  hl1_studiomodel_render_data.h  hl1_studiomodel_setup.cpp  hl1_studiomodel_setup.h  hl1_ui_data.h  hl1_ui_setup.cpp  hl1_ui_setup.h
hl_mdlviewer/src/lib/nanogui/hl1/: hl1_nanogui_view.cpp  hl1_nanogui_view.h  hl1_nanogui_view_glcanvas.cpp  hl1_nanogui_view_glcanvas.h
hl_mdlviewer/src/private/: pch.h
hl_mdlviewer/tests/: CMakeLists.txt  pch.h  shader_parser.cpp  tostring_conversions.h
hl_mdlviewer/tests/shaders/includes_are_only_included_once/: defines.in  includes_with_no_quotes.shader  includes_with_quotes.shader
